[gd_scene load_steps=6 format=3 uid="uid://mode_select"]

[ext_resource type="Script" path="res://scripts/mode_select.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://cflvlm6dee163" path="res://assets/fonts/editundo.ttf" id="2_font"]
[ext_resource type="Texture2D" path="res://assets/pieces/buttonborder.png" id="3_border"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.12, 0.12, 0.15, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.3, 0.3, 0.35, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card_selected"]
bg_color = Color(0.15, 0.15, 0.2, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.84, 0, 1)

[node name="ModeSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="FallingPieces" type="Node2D" parent="."]

[node name="DarkOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 0.4)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = 320.0
offset_right = 500.0
offset_bottom = 400.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 56
text = "CHOOSE YOUR BATTLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -460.0
offset_top = 60.0
offset_right = 460.0
offset_bottom = 280.0
theme_override_constants/separation = 20

[node name="TutorialCard" type="Panel" parent="CardsContainer"]
custom_minimum_size = Vector2(210, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="VBox" type="VBoxContainer" parent="CardsContainer/TutorialCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 12.0
offset_right = -8.0
offset_bottom = -12.0
theme_override_constants/separation = 6

[node name="Icon" type="Label" parent="CardsContainer/TutorialCard/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 36
text = "T"
horizontal_alignment = 1

[node name="Name" type="Label" parent="CardsContainer/TutorialCard/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "TUTORIAL"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CardsContainer/TutorialCard/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "Learn the Basics"
horizontal_alignment = 1

[node name="Difficulty" type="Label" parent="CardsContainer/TutorialCard/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 10
text = "Beginner"
horizontal_alignment = 1

[node name="Button" type="Button" parent="CardsContainer/TutorialCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_card")
theme_override_styles/hover = SubResource("StyleBoxFlat_card")
theme_override_styles/pressed = SubResource("StyleBoxFlat_card")
flat = true

[node name="CampaignCard" type="Panel" parent="CardsContainer"]
custom_minimum_size = Vector2(210, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card_selected")

[node name="VBox" type="VBoxContainer" parent="CardsContainer/CampaignCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 12.0
offset_right = -8.0
offset_bottom = -12.0
theme_override_constants/separation = 6

[node name="Icon" type="Label" parent="CardsContainer/CampaignCard/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 36
text = "C"
horizontal_alignment = 1

[node name="Name" type="Label" parent="CardsContainer/CampaignCard/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "CAMPAIGN"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CardsContainer/CampaignCard/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "Story Mode"
horizontal_alignment = 1

[node name="Recommended" type="Label" parent="CardsContainer/CampaignCard/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 9
text = "RECOMMENDED"
horizontal_alignment = 1

[node name="Button" type="Button" parent="CardsContainer/CampaignCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_card")
theme_override_styles/hover = SubResource("StyleBoxFlat_card")
theme_override_styles/pressed = SubResource("StyleBoxFlat_card")
flat = true

[node name="SandboxCard" type="Panel" parent="CardsContainer"]
custom_minimum_size = Vector2(210, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="VBox" type="VBoxContainer" parent="CardsContainer/SandboxCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 12.0
offset_right = -8.0
offset_bottom = -12.0
theme_override_constants/separation = 6

[node name="Icon" type="Label" parent="CardsContainer/SandboxCard/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 1, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 36
text = "S"
horizontal_alignment = 1

[node name="Name" type="Label" parent="CardsContainer/SandboxCard/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 1, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "SANDBOX"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CardsContainer/SandboxCard/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "Free Play"
horizontal_alignment = 1

[node name="Difficulty" type="Label" parent="CardsContainer/SandboxCard/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 10
text = "Custom"
horizontal_alignment = 1

[node name="Button" type="Button" parent="CardsContainer/SandboxCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_card")
theme_override_styles/hover = SubResource("StyleBoxFlat_card")
theme_override_styles/pressed = SubResource("StyleBoxFlat_card")
flat = true

[node name="MultiplayerCard" type="Panel" parent="CardsContainer"]
custom_minimum_size = Vector2(210, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="VBox" type="VBoxContainer" parent="CardsContainer/MultiplayerCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 12.0
offset_right = -8.0
offset_bottom = -12.0
theme_override_constants/separation = 6

[node name="Icon" type="Label" parent="CardsContainer/MultiplayerCard/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.35, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 36
text = "M"
horizontal_alignment = 1

[node name="Name" type="Label" parent="CardsContainer/MultiplayerCard/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.35, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "MULTIPLAYER"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CardsContainer/MultiplayerCard/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "Coming Soon"
horizontal_alignment = 1

[node name="Difficulty" type="Label" parent="CardsContainer/MultiplayerCard/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 10
text = "PvP"
horizontal_alignment = 1

[node name="BottomContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = 120.0
offset_right = 500.0
offset_bottom = 380.0
theme_override_constants/separation = 40

[node name="DescriptionPanel" type="Panel" parent="BottomContainer"]
custom_minimum_size = Vector2(550, 250)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="VBox" type="VBoxContainer" parent="BottomContainer/DescriptionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 12

[node name="ModeName" type="Label" parent="BottomContainer/DescriptionPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "CAMPAIGN"

[node name="ModeSubtitle" type="Label" parent="BottomContainer/DescriptionPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "Story Mode"

[node name="Separator" type="HSeparator" parent="BottomContainer/DescriptionPanel/VBox"]
layout_mode = 2

[node name="Description" type="Label" parent="BottomContainer/DescriptionPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "Lead your forces through an epic campaign!
Battle through 25+ challenging missions,
face powerful boss enemies, and unlock
new abilities as you progress."
autowrap_mode = 2

[node name="Features" type="Label" parent="BottomContainer/DescriptionPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "- 25+ missions
- Boss battles
- Unlock content"

[node name="RightPanel" type="VBoxContainer" parent="BottomContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="BottomContainer/RightPanel"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_colors/font_color = Color(0.1, 0.1, 0.1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 40
text = "START"

[node name="BackButton" type="Button" parent="BottomContainer/RightPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "BACK"

[node name="FadeOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="CardsContainer/TutorialCard/Button" to="." method="_on_card_selected" binds= ["tutorial"]]
[connection signal="pressed" from="CardsContainer/CampaignCard/Button" to="." method="_on_card_selected" binds= ["campaign"]]
[connection signal="pressed" from="CardsContainer/SandboxCard/Button" to="." method="_on_card_selected" binds= ["sandbox"]]
[connection signal="pressed" from="CardsContainer/MultiplayerCard/Button" to="." method="_on_card_selected" binds= ["multiplayer"]]
[connection signal="pressed" from="BottomContainer/RightPanel/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="BottomContainer/RightPanel/BackButton" to="." method="_on_back_pressed"]
